--- a/store/blocks/global/screen/search.jsonc
+++ b/store/blocks/global/screen/search.jsonc
@@ -2,11 +2,7 @@
   "store.search": {
     "blocks": ["search-result-layout"]
   },
-    "store.search#department":{
-      "blocks": ["search-result-layout"]
-    },
 
-    
     "store.search#category":{
       "blocks": ["search-result-layout"]
     },
@@ -19,22 +15,37 @@
       "blocks": ["search-result-layout"]
     },
 
+    "product-summary.shelf#demo1": {
+      "children": [
+        "stack-layout#prodsum",
+        "product-summary-name",
+        "product-rating-inline",
+        "product-summary-space",
+        "product-summary-price",
+        "product-summary-buy-button"
+      ]
+    },
+    "list-context.product-list#demo1": {
+      "blocks": ["product-summary.shelf#demo1"],
+      "children": ["slider-layout#demo-products"]
+  }
 
+/*
   "search-result-layout": {
     "blocks": [
-      "search-result-layout.desktop",
+      "search-result-layout.desktop#department",
       "search-result-layout.mobile",
       "search-not-found-layout"
     ]
-  },
- 
+  }*/
+}
 
   /*BreadCrumb: sirve como navegador auxiliar en busqueda, es un tipo de icono que va arriba de la busqueda*/
 
-   
+   /*
   "search-result-layout.desktop#department":{
     "children": [
-      "flex-layout.row#department__breadcrumb"
+    "flex-layout.row#department__breadcrumb"
     ]
   },
 
@@ -67,4 +78,4 @@
       "text": "mobile result"
     }
   }
-}
+}*/
