--- a/store/blocks/global/screen/home.jsonc
+++ b/store/blocks/global/screen/home.jsonc
@@ -1,6 +1,7 @@
 {
   "store.home": {
     "blocks": [
+      "mega-menu#home_menu",
       "flex-layout.row#welcome__section",
       "flex-layout.row#section__one-homeUp",
       "rich-text#title__section-two",
@@ -21,6 +22,13 @@
       //"flex-layout.row#section__nine-footer"
     ]
   },
+  "mega-menu#home_menu":{
+    "props":{
+      "blockClass":"home__menu",
+      "openOnly":"horizontal"
+    }
+  },
+
   "flex-layout.row#welcome__section": {
     "children": [
       "image#section__one-welcome"
